# Bitcoin-Price-Prediction-with-ASK-State

bitcoin-rust/: Cargo.toml
bitcoin-rust/src/: main.rs  psbt_segwit.rs  psbt_taproot.rs  taproot.rs
bitcoin-tutorials/: basics.js  package-lock.json  package.json
frontend/private-btc-prediction/: README.md  package-lock.json  package.json
frontend/private-btc-prediction/app/: layout.tsx  page.tsx
frontend/private-btc-prediction/app/about/: page.tsx
frontend/private-btc-prediction/app/components/: LandingPage.tsx  LandingPageBackground.tsx  NavBar.tsx
frontend/private-btc-prediction/app/components/(reactbits)/: CardNav.tsx  FaultyTerminal.tsx  ScrambledText.tsx  TextType.tsx
