[package]
name = "bitcoin-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcoin = "0.31"
miniscript = "12"
secp256k1 = { version = "0.28", features = ["rand"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"